#file( GLOB CORE_HEADER_FILES *.h *.hpp )
#aux_source_directory( ${CMAKE_CURRENT_SOURCE_DIR} CORE_SRC )

#add_library(building_footprint_rectangle ${CORE_HEADER_FILES}   ${CORE_SRC})

#set( BUILDING_FOOTPRINT_RECTANGLE_LIBRARIES ${Boost_LIBRARIES} ${GEOMETRY_LIBRARIES} building_footprint_rectangle PARENT_SCOPE )

if(UNIX)
	set( BUILDING_FOOTPRINT_RECTANGLE_LIBRARIES ${Boost_LIBRARIES} ${GEOMETRY_LIBRARIES} PARENT_SCOPE )
else()
	set( BUILDING_FOOTPRINT_RECTANGLE_LIBRARIES ${GEOMETRY_LIBRARIES} PARENT_SCOPE )
endif()

